--- a/templates/base.html
+++ b/templates/base.html
@@ -36,10 +36,7 @@
             {% comment %} <div class="header_img"> <i class='fas fa-user-circle' style="font-size: 48px;" id="header-toggle"></i> </div> {% endcomment %}
         </header>
         <!--Container Main start-->
-        <div id="main-content" class="pt-5">
-            <div id="main-content">
-                test
-            </div>
+        <div id="main-content" class="pt-5 d-flex justify-content-center">
             {% block content %}
             {% endblock %}
         </div>
