chart work and font stuff

--- a/static/sass/_variables.scss
+++ b/static/sass/_variables.scss
@@ -6,7 +6,7 @@ $normal-font-size: 1rem;
 $z-fixed: 100;
 
 //Colors
-$primary-color: #6a329f;
+$primary-color: #c90076;
 $primary-color-lighter-90: #ddffea;
 $light-white-color: #F7F6FB;
 $light-gray-color: #D3D3D3
