added more filters, made icon crypto work, general styling

--- a/static/sass/_variables.scss
+++ b/static/sass/_variables.scss
@@ -9,4 +9,6 @@ $z-fixed: 100;
 $primary-color: #c90076;
 $primary-color-lighter-90: #ddffea;
 $light-white-color: #F7F6FB;
-$light-gray-color: #D3D3D3
+$light-gray-color: #D3D3D3;
+
+$background-color-light: #f5f9fc;
