--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     <meta charset="utf-8">
-    <title>{% block title %}{% endblock %} - INSOFF</title>
+    <title>{% block title %}{% endblock %} - DCACalc</title>
     {% load static %}
     {% include 'components/style.html' %}
     {% include 'components/script.html' %}
@@ -9,14 +9,13 @@
     <body>
         <header class="header" id="header">
             <div class="d-flex align-items-center">
-                <div class="header_app">INSOC</div>
+                <div class="header_app">dcaFree</div>
                 <div class="t-navbar" id="nav-bar">
                     <nav class="nav">
                         <div>
                             <div class="nav_list">
-                                <a href="javascript:javascript:void(0)" onClick="javascript:nav_dashboard()" class="nav_logo"><span class="nav_name">INSOC</span></a>
-                                <a href="javascript:javascript:void(0)" onClick="javascript:nav_dashboard()" class="nav_link active"><span class="nav_name">Home</span></a>
-                                <a href="javascript:javascript:void(0)" onClick="javascript:nav_charts()" class="nav_link"><span class="nav_name">Charts</span></a>
+                                <a href="javascript:javascript:void(0)" onClick="javascript:nav_dashboard()" class="nav_logo"><span class="nav_name">DCA</span></a>
+                                <a href="javascript:javascript:void(0)" onClick="javascript:nav_charts()" class="nav_link active"><span class="nav_name">Investment Calculator</span></a>
                                 <a href="#" class="nav_link"><span class="nav_name">About Us</span></a>
                             </div>
                         </div>
