--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,12 @@
     <body>
         <header class="header" id="header">
             <div class="d-flex align-items-center">
-                <div class="header_app">dcaFree</div>
+                <div class="header_app">DCAY</div>
                 <div class="t-navbar" id="nav-bar">
                     <nav class="nav">
                         <div>
                             <div class="nav_list">
-                                <a href="javascript:javascript:void(0)" onClick="javascript:nav_dashboard()" class="nav_logo"><span class="nav_name">DCA</span></a>
+                                <a href="javascript:javascript:void(0)" onClick="javascript:nav_dashboard()" class="nav_logo"><span class="nav_name">DCAY</span></a>
                                 <a href="javascript:javascript:void(0)" onClick="javascript:nav_charts()" class="nav_link active"><span class="nav_name">Investment Calculator</span></a>
                                 <a href="#" class="nav_link"><span class="nav_name">About Us</span></a>
                             </div>
