Cool charts bro

--- a/static/sass/components/_chart.scss
+++ b/static/sass/components/_chart.scss
@@ -1,6 +1,7 @@
 .chart-container{
-    .row{
-    }
-    .chart-filter{
+    .data-used-chart{
+        canvas{
+            height: 300px;
+        }
     }
 }
