--- a/static/sass/_variables.scss
+++ b/static/sass/_variables.scss
@@ -12,3 +12,6 @@ $light-white-color: #F7F6FB;
 $light-gray-color: #D3D3D3;
 
 $background-color-light: #f5f9fc;
+
+//FONT
+$base-font: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
