--- a/static/sass/base.scss
+++ b/static/sass/base.scss
@@ -25,7 +25,7 @@ a {
 }
 
 .crypto-select{
-    font-family: 'cryptofont';
+    font-family: 'cryptofont', $base-font;
     filter-option{
         color: $primary-color;
     }
